feat: add pinned chats
